[package]
name = "auriga"
version = "0.1.0"
authors = ["abhi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["full"] }
futures = "0.3"
bytes = "0.5"

[[bin]]
name = "producer"
path = "src/clients/producer.rs"

[[bin]]
name = "consumer"
path = "src/clients/consumer.rs"
