[package]
name = "auriga"
version = "0.1.0"
authors = ["abhi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1"
futures = "0.3"
bytes = "0.5"

[[bin]]
name = "producer"
path = "src/clients/producer.rs"

[[bin]]
name = "producer_loop"
path = "src/clients/producer_loop.rs"

[[bin]]
name = "consumer"
path = "src/clients/consumer.rs"
